- Added more tests and sonar-project.yml